--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>2.14.1</version>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.12</artifactId>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 
